--- a/core/utilities/CMakeLists.txt
+++ b/core/utilities/CMakeLists.txt
@@ -32,14 +32,11 @@ add_salsa_version(salsautilities)
 # Specifying the the include directories: they are used both here and  exported
 # by this library (so that targets linking this one will automatically import
 # the include directories declared here). The "${CMAKE_CURRENT_SOURCE_DIR}" is
-# to make Eigen available to other libraries. CMAKE_SOURCE_DIR is needed for
-# salsaversion.h
+# to make Eigen available to other libraries
 target_include_directories(salsautilities PUBLIC
                            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
                            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-                           $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
-                           $<INSTALL_INTERFACE:include/salsa/utilities>
-                           $<INSTALL_INTERFACE:include/salsa>)
+                           $<INSTALL_INTERFACE:include/salsa/utilities>)
 
 # Adding dependencies (they are also exported, so targets linking this one will
 # automatically link libraries declared here)
